--- a/src/scss/globals/global.prod.scss
+++ b/src/scss/globals/global.prod.scss
@@ -141,6 +141,7 @@ fuse-main
 
 .ngx-datatable {
   .datatable-body {
+    min-height: 48px;
     .progress-linear {
       display: block;
       position: relative;
